# ndn-lvs-envelope

./: .gitignore  README.md  pyproject.toml  setup.cfg
envelope/: __init__.py  envelope.py  storage.py
envelope/impl/: __init__.py  envelope_impl.py  tib_impl.py
envelope/impl/checker/: __init__.py  cascade_checker.py  pipelines.py
envelope/impl/storage/: __init__.py  express_to_network.py  mem_storage.py  repov3_storage.py  sqlite3_storage.py
examples/: example.py  repo.conf
tib/: annot_model.py  binary.py  storage.py  tib.py
tib/impl/: tib_impl.py
tib/impl/checker/: cascade_checker.py
tib/impl/storage/: assisted_mem_storage.py  mem_storage.py  repov3_storage.py  sqlite3_storage.py
