[tool.poetry]
name = "ndn-lvs-envelope"
version = "0.1.1"
description = "A New API for NDN Trust Schema"
authors = ["Tianyuan Yu <tianyuan@cs.ucla.edu>"]
readme = "README.md"

packages = [{include = "envelope"}]

[tool.poetry.dependencies]
python = "^3.10"
python-ndn = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
