[metadata]
name = tib
version = attr: tib.__version__
url = https://github.com/tianyuan129/trust-info-base
author = Tianyuan Yu
author_email = tianyuan@cs.ucla.edu
description = NDN Trust Information Base, a new security module replacing Keychain
keywords = NDN
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Internet
    Topic :: System :: Networking
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    plyvel>=1.4.0
    cryptography>=36.0.2
    ecdsa>=0.17.0
    python-ndn>=0.3.post2
    ndn-python-repo>=0.3
python_requires = >=3.10
setup_requires =
    setuptools>=59.2.0

[options.extras_require]
dev =
    pytest>=6.2.5
    pytest-cov>=3.0.0
    flake8>=4.0.1
    build>=0.7.0
